# gitgraph-tui

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-TW.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-06-gitgraph-tui.md
docs/superpowers/specs/: 2026-07-06-gitgraph-tui-design.md  2026-07-06-open-source-release-design.md
src/: app.rs  event.rs  lib.rs  main.rs
src/git/: diff.rs  mod.rs  repo.rs  types.rs  watch.rs
src/graph/: layout.rs  mod.rs
src/ui/: detail_view.rs  diff_view.rs  graph_view.rs  mod.rs  popup.rs  util.rs
tests/: app_state.rs  cli.rs  git_diff.rs  git_repo.rs  live_refresh.rs  ui_render.rs
tests/common/: mod.rs
