[package]
name = "gitgraph-tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "A read-only git history graph viewer for the terminal"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
git2 = "0.21"
lru = "0.18"
ratatui = "0.30"
time = { version = "0.3", features = ["formatting", "macros"] }
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
