[package]
name = "gitgraph-tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "A read-only git history graph viewer for the terminal"
license = "MIT"
repository = "https://github.com/bjo4/gitgraph-tui"
readme = "README.md"
keywords = ["git", "tui", "terminal", "graph", "log"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
git2 = { version = "0.21", default-features = false }
lru = "0.18"
ratatui = "0.30"
time = { version = "0.3", features = ["formatting", "macros"] }
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
